Switch to jline-jni
Closes #599